fix(galaxio-gatling): the 3.11 build-plugin floors are not floors
The 3.11 row was the one cell nothing had ever executed. A 3.11.5 project on
Maven and one on sbt, both rendered from the gatling template pack and run on
JDK 17 against a local HTTP server, each compiled and ran a smoke simulation
following gatling-migration alone. Both stated floors survive as version
choices and neither survives as a floor.

- `gatling-maven-plugin` on 3.11.x was `4.8.0`+ and is 4.x. Seventeen sampled
  releases from `3.9.0` to `4.21.10` each compile, run and generate reports;
  `4.8.0` is not a boundary. The bottom is lower and for another reason:
  `3.1.2` and below try to compile the simulations themselves and die on
  `ClassNotFoundException: io.gatling.compiler.ZincCompiler`.
- The Maven `3.6.3` binary floor does not exist. `4.8.0` asks for Maven `3.0`
  in its descriptor, `4.9.0` is the first to ask for `3.6.3`, that field went
  unenforced in every pairing tried, and the stated symptom never occurs:
  `4.21.10`, which asks for `3.9.16`, runs on Maven `3.3.9`. A Maven-binary
  minimum does bite in a stock project, but from `maven-compiler-plugin`.
- `--add-opens` stays unnecessary on 3.11 for both, as the Gradle references
  already claimed. That is why the line has no plugin floor at all — the floor
  at 3.13 is the flag, and 3.11 does not need it.

The floors are stated twice on purpose, so the correction lands in
`gatling-lines.md` and `gatling-migration/SKILL.md` both, plus the three
`build-maven-*.md` siblings that restated it downstream.

Closes #49